2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * people.src: Added myself to the list :)
	* MAINTAINERS: Added file with a list of latest commiters
	
2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles/cairo-pygtk-widgets/
	* articles/cairo-pygtk-widgets/cairo-pygtk-widgets.htm
	* articles/cairo-pygtk-widgets/cairo-pygtk-widgets.css
	* articles/cairo-pygtk-widgets/clock_ex1.png
	* articles/cairo-pygtk-widgets/clock_ex2.png
	* articles/cairo-pygtk-widgets/clock_ex3.png
	* articles/cairo-pygtk-widgets/clock_ex1.py
	* articles/cairo-pygtk-widgets/clock_ex2.py
	* articles/cairo-pygtk-widgets/clock_ex3.py
	* articles/cairo-pygtk-widgets/*: Added previous files
	to hold a local copy of the article.
	* articles.src: fix typo

2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* newsitems.py: news entry for the article "Writing
	a Widget Using Cairo and PyGTK 2.8" by Lawrence Oluyede

2005-12-05  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles.src: Add article "Writing a Widget Using
	Cairo and PyGTK 2.8" by Lawrence Oluyede (patch by
	Gian Mario Tagliaretti)

2005-11-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles.src: Add temporarily offline notice

2005-11-23  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added PyGG

2005-11-16  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Pygmy

2005-11-11  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added PyConsole widget

2005-10-25  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Soundconverter

2005-10-24  Thomas Wood  <thos@gnome.org>

	* img/gnome-64.png: Updated to new version

2005-10-18  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added PyNeighborhood

2005-10-17  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Added Pybliographer
