@@ -50,6 +50,13 @@
    <li><a href="dist/pygnomeprintui.tar.bz2">Bzip2'd Tarball of Reference Manual</a>
 </ul>
 
+<h3>Python GnomeVFS Reference Manual</h3>
+ 
+<ul>
+   <li><a href="pygnomevfs/index.html">Reference Manual</a></li>
+   <li><a href="dist/pygnomevfs.tar.bz2">Bzip2'd Tarball of Reference Manual</a>
+</ul>
+
 </div>
 
 <!--stp:include('foot.src') -->
